1. appshell responsive styles refactored 2. fixed: Safari navbar layout overflow on md breakpoint

--- a/Upnp.Control.Web/ClientApp/src/styles/_appshell.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_appshell.scss
@@ -1,35 +1,39 @@
 .shell {
     height: 100dvb;
     display: grid;
-    grid-template: 1fr auto / auto 1fr;
-    grid-template-areas: "main main" "navbar navbar";
+    grid-template: "main" 1fr "navbar" 80px / 1fr;
 
     & > .navbar {
         --#{$prefix}navbar-padding-x: 0;
         --#{$prefix}navbar-padding-y: 0;
-        --#{$prefix}navbar-nav-link-padding-x: #{$nav-link-padding-y};
         --#{$prefix}navbar-focus-box-shadow: ;
         grid-area: navbar;
-        font-size: small;
-        gap: #{map-get($spacers, 2)};
+        flex-direction: column;
+        font-size: 12px;
+        line-height: 16px;
+        container-type: inline-size;
+        container: navbar / size;
+
+        .navbar-brand {
+            padding: 16px;
+        }
 
         & > nav {
             display: flex;
-            flex: 1;
 
             & > .nav-link {
+                flex: 1;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                flex: 1;
-                overflow: hidden;
+                padding: 12px 0 16px 0;
+                gap: 4px;
 
                 & > svg {
-                    margin: unset;
                     box-sizing: content-box;
-                    width: min(64px, 100%);
-                    padding-block: #{map-get($spacers, 1)};
-                    border-radius: 1em;
+                    width: 64px;
+                    padding-block: 4px;
+                    border-radius: 100vw;
                 }
 
                 &.active > svg {
@@ -58,41 +62,49 @@
         container: main / size;
     }
 
-    @include media-breakpoint-up(sm) {
-        grid-template-areas: "navbar main" "navbar main";
+    @media (width >=map-get($grid-breakpoints, sm)) {
+        grid-template: "navbar main" 1fr / 80px 1fr;
 
         & > .navbar {
-            --#{$prefix}navbar-padding-y: #{map-get($spacers, 3)};
-            --#{$prefix}navbar-nav-link-padding-x: #{calc($nav-link-padding-x / 2)};
-            flex-direction: column;
-            align-items: stretch;
             justify-content: center;
 
             & > nav {
                 flex-direction: column;
-                flex: 0;
+                gap: 12px;
 
-                & > .nav-link > svg {
-                    width: min(56px, 100%);
+                & > .nav-link {
+                    flex: 0 0 56px;
+                    padding: 0;
+
+                    > svg {
+                        width: 56px;
+                        margin-inline: 12px;
+                    }
                 }
             }
         }
     }
 
-    @include media-breakpoint-up(md) {
+    @media (width >map-get($grid-breakpoints, md)) {
+        grid-template: "navbar main" 1fr / 240px 1fr;
+
         & > .navbar {
-            --#{$prefix}navbar-padding-x: #{map-get($spacers, 3)};
-            --#{$prefix}navbar-nav-link-padding-x: #{$nav-link-padding-x};
+            --#{$prefix}navbar-padding-x: 8px;
+            --#{$prefix}navbar-padding-y: 16px;
             --#{$prefix}navbar-focus-box-shadow: #{$navbar-focus-box-shadow};
             --#{$prefix}navbar-bg: transparent;
-            font-size: unset;
+            font-size: 16px;
 
             & > nav {
-                gap: map-get($spacers, 1);
+                gap: 0;
 
                 & > .nav-link {
+                    flex: 0 0 48px;
                     flex-direction: row;
-                    border-radius: 1lh;
+                    gap: 12px;
+                    border-radius: 100vh;
+                    margin: 0;
+                    padding: 0 28px 0 16px;
 
                     &.active {
                         background-color: var(--#{$prefix}navbar-active-bg);
@@ -107,14 +119,15 @@
                     }
 
                     & > svg {
-                        width: 1em;
-                        margin-right: #{map-get($spacers, 3)};
+                        box-sizing: border-box;
+                        width: 24px;
+                        margin: 0;
                         padding: 0;
                         border-radius: 0;
                     }
 
                     &:is(.active, :active, :focus, :hover) > svg {
-                        background: initial;
+                        background: transparent;
                     }
                 }
             }
